--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 JWT_SECRET=supersecretkey
 PORT=4000
-MONGO_URI=mongodb+srv://chanbin:chanbin@cluster0.ppvm9.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=<your_mongo_uri>
